Fri Nov 14 15:06:55 CET 2008 Daniel Veillard <veillard@redhat.com>

	* python/Makefile.am libxslt/Makefile.am configure.in
	  libexslt/Makefile.am: applied patch from Roumen Petrov for
	  mingw cross compilation problems raised by Rich Jones

Tue Oct 28 11:55:27 CET 2008 Daniel Veillard <veillard@redhat.com>

	* configure.in Makefile.am: patch from Richard Jones to build
	  shared libs with MinGW cross-compiler

Tue Oct  7 18:16:08 CEST 2008 Daniel Veillard <veillard@redhat.com>

	* libxslt/pattern.c: prevent some unchecked pointer accesses, patch
	  by Jake Goulding

Wed Aug  6 20:10:08 HKT 2008 William Brack <wbrack@mmm.com.hk>

	* Minor cleanup of "typo" and some compilation warnings:
	  tests/namespaces/tst7.xsl: fixed typo detected by new libxml2 code
	  libxslt/keys.c, libxslt/xsltlocale.c, libexslt/date.c: trivial
	  changes for gcc warnings.

Fri Aug  1 10:16:48 CEST 2008 Daniel Veillard <veillard@redhat.com>

	* libxslt/xsltconfig.h.in libxslt/xslt.c libxslt/extensions.c
	  libxslt/xsltlocale.c libxslt/preproc.c libxslt/xsltutils.c
	  libxslt/xsltlocale.h libxslt/win32config.h configure.in
	  config.h.in win32/configure.js: big patch from Roumen Petrov
	  finishing xsl:sort lang support with many portability issues
	  fixed and feedback from Nick Wellnhofer and Rob Richards

Fri Aug  1 07:54:02 CEST 2008 Daniel Veillard <veillard@redhat.com>

	* libexslt/crypto.c: fix for CVE-2008-2935 libexslt RC4
	  encryption/decryption functions

Mon Jul 28 14:46:27 CEST 2008 Daniel Veillard <veillard@redhat.com>

	* configure.in: fix my static linking setup on x86_64

Sun Jul 27 13:52:10 CEST 2008 Daniel Veillard <veillard@redhat.com>

	* libxslt/xslt.c: avoid a quadratic behaviour when hitting duplicates
	  exclude-result-prefixes declarations, should fix #544906

Sat Jul 26 12:43:18 PST 2008 William Brack <wbrack@mmm.com.hk>

	*configure.in: fixed option --with-debugger with patch from
	 Arun Ragnavan #544829
